<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="category_sync_import_export"
        android:title="@string/settings_sync_import_export" >
        <Preference
            android:key="settings_export_data"
            android:title="@string/settings_export" >
        </Preference>
        <Preference
            android:key="settings_import_data"
            android:title="@string/settings_import" >
        </Preference>
    </PreferenceCategory>
    <!-- <PreferenceCategory -->
    <!-- android:key="category_gestures" -->
    <!-- android:title="@string/settings_category_gestures" > -->
    <!-- <CheckBoxPreference -->
    <!-- android:key="settings_enable_swype" -->
    <!-- android:defaultValue="true" -->
    <!-- android:title="@string/settings_enable_swype" > -->
    <!-- </CheckBoxPreference> -->
    <!-- </PreferenceCategory> -->
    <PreferenceCategory
        android:key="category_animations"
        android:title="@string/settings_category_animations" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_enable_animations"
            android:title="@string/settings_enable_animations" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_other"
        android:title="@string/settings_category_other" >
        <Preference
            android:key="reset_all_data"
            android:title="@string/settings_reset_all_data" >
        </Preference>
        <Preference
            android:key="settings_about"
            android:title="@string/settings_about" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>