<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Federico Iosue (federico.iosue@gmail.com)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/category_title"
        android:background="@drawable/bg_card"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/category_description"
        android:visibility="gone" />

    <ViewSwitcher
        android:id="@+id/colorChooserSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/colorPaletteGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <GridView
                android:id="@+id/colorPalette"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="0.74"
                android:drawSelectorOnTop="true"
                android:gravity="center"
                android:horizontalSpacing="3dp"
                android:listSelector="@android:color/darker_gray"
                android:numColumns="6"
                android:paddingTop="10dp"
                android:verticalSpacing="3dp" >

            </GridView>

            <Button
                android:id="@+id/moreColors"
                style="@style/Button.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/more_colors"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/colorPickerGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/colorpicker_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.14" />

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.14"
                android:visibility="visible" />

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar_category"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.06"
                android:visibility="gone" />

        </LinearLayout>

    </ViewSwitcher>

    <Button
        android:id="@+id/delete"
        style="@style/Button.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delete_this_category"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            style="@style/Button.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/discard"
            style="@style/Button.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discard" />
    </LinearLayout>

</LinearLayout>